# Learning

./: .gitignore  README.md
challenges/advent-of-code/: Cargo.toml  README.md
challenges/advent-of-code/inputs/: day-12-tmp.txt
challenges/advent-of-code/src/: d10p1.rs  d10p2.rs  d11p1.rs  d11p2.rs  d12p1.rs  d12p2.rs  d13p1.rs  d13p2.rs  d1p1.rs  d1p2.rs  d2p1.rs  d2p2.rs  d3p1.rs  d3p2.rs  d4p1.rs  d4p2.rs  d5p1.rs  d5p2.rs  d6p1.rs  d6p2.rs  d7p1.rs  d7p2.rs  d8p1.rs  d8p2.rs  d9p1.rs  d9p2.rs  part-1.rs  part-2.rs
challenges/advent-of-code/src/lib/: io_helpers.rs  mod.rs
scripts/: check-for-nvmrc.sh
topics/aws/: .gitignore  README.md
topics/aws/api-gateway-wss/: .gitignore  README.md  package-lock.json  package.json  template.yml  webpack.config.js
topics/aws/experiment-ecs/: README.md  ecs.config  index.js  package-lock.json  package.json  startup-script.sh  template.yml
topics/aws/express-test-lambda/: create.js  get.js  package-lock.json  package.json  package.yml  template.yaml
topics/aws/hello-cdk/: .gitignore  cdk.json  package-lock.json  package.json
topics/aws/learning-envoy-mesh/: Dockerfile  Makefile  go.mod
topics/aws/learning_fargate/: Dockerfile  run.sh
topics/aws/s3-static-site/: deploy.sh  package-lock.json  package.json  template.yml  webpack.config.js
topics/cloudflare-workers/: README.md
topics/cloudflare-workers/complex-worker/: Cargo.toml  README.md  wrangler.toml
topics/cloudflare-workers/proxy-worker/: index.js  package.json  wrangler.toml
topics/cloudflare-workers/qr-codes/: index.js  package-lock.json  package.json  wrangler.toml
topics/cloudflare-workers/timing/: README.md  index.js  package.json  wrangler.toml
topics/cloudflare-workers/todos/: index.js  index.spec.js  package-lock.json  package.json  wrangler.toml
topics/design/: package-lock.json  package.json
topics/design/.storybook/: main.js
topics/golang/go-graphql/: Makefile  Taskfile.yml  go.mod  gograph
topics/golang/go_cli_exp/: README.md  go.mod
topics/golang/gomovies/: Dockerfile  README.md  docker-compose.yml  dummy_data.json  go.mod
topics/golang/learning-casbin/: Makefile  README.md  auth_model.conf  go.mod  go.sum  policy.csv
topics/golang/learning-raft/: Makefile  go.mod
topics/golang/rt-chat-tute/: .gitignore  Dockerfile  README.md  Taskfile.yml
topics/js/badjeweled/: package-lock.json  package.json
topics/js/learning-react-relay/: .eslintrc.cjs  .gitignore  README.md  codegen.ts  package-lock.json  package.json
topics/js/learning-threejs/: package-lock.json  package.json
topics/js/learning-webgl2/: README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
topics/js/raytracer/: README.md  package-lock.json  package.json
topics/js/react-chat-app/: README.md  react-chat-app.code-workspace
topics/js/thebookofshaders/: index.html  package-lock.json  package.json
topics/js/todo/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  rollup.config.js  vercel.json
topics/reading/: marketing.md
topics/rust/amethyst-pong/: Cargo.toml  README.md
topics/rust/amethyst-pong/assets/texture/: pong_spritesheet.ron
topics/rust/amethyst-pong/config/: bindings.ron
topics/rust/amethyst-pong/src/: main.rs  pong.rs  systems.rs
topics/rust/gfx_experiment/: Cargo.toml  README.md
topics/rust/gfx_experiment/src/: main.rs
topics/rust/gfx_experiment/src/assets/: shader.frag  shader.vert
topics/rust/hexes/: Cargo.toml  build.rs
topics/rust/hexes/src/: main.rs  point_gen.rs
topics/rust/hexes/src/assets/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
topics/rust/interpolation/: Cargo.toml
topics/rust/interpolation/src/assets/: shader.frag  shader.vert
topics/rust/interpolation/src/lib/: messages.rs
topics/rust/interpolation/src/lib/network/: constants.rs  messages.rs  mod.rs  serialization.rs
topics/rust/learn_traits_draw/: Cargo.toml
topics/rust/learn_webserver/: Cargo.toml  README.md
topics/rust/learn_webserver/k6/: package-lock.json  package.json  reports.txt  script.js
topics/rust/learn_webserver/src/: lib.rs  main.rs
topics/rust/learn_webserver/static/: 404.html  dummy.html  index.html
topics/rust/learning_actix_web/: .env  Cargo.toml
topics/rust/learning_actix_web/migrations/2020-05-16-044051_create_users/: up.sql
topics/rust/learning_actix_web/src/: main.rs  schema.rs
topics/rust/learning_actix_web/src/services/: user.rs
topics/rust/learning_rust/: Cargo.toml
topics/rust/minigrep/: Cargo.toml
topics/rust/platformer/: Cargo.toml
topics/rust/qr-code-gen/: Cargo.toml  README.md
topics/rust/raytracer/: Cargo.toml  README.md  build.rs
topics/rust/raytracer/src/: intersect.rs  main.rs  sphere.rs  texture.rs  window.rs
topics/rust/raytracer/src/assets/: shader.frag
topics/rust/rectangles/: Cargo.toml
topics/rust/roguelike-tutorial/: .gitignore  Cargo.toml  (+1 more)
topics/rust/rts-3d/: Cargo.toml
topics/rust/rts-3d/assets/models/: terrain.mtl
topics/rust/rts-3d/assets/shaders/: shader.frag  shader.vert
topics/rust/rts-3d/src/: camera.rs  components.rs  lib.rs  log.rs  main.rs  render_system.rs  resources.rs  timer.rs  window.rs
topics/rust/rts-3d/src/render/: gl_buffer.rs  gl_index_buffer.rs  gl_mesh.rs  gl_model.rs  gl_shader.rs  gl_vertex_array.rs  mesh.rs  mod.rs  model.rs  renderable.rs  simple_renderer.rs  sprite.rs
topics/rust/rust-opengl/: Cargo.toml  README.md  build.rs
topics/rust/rust-opengl-3d/: Cargo.toml  build.rs
topics/rust/rust-opengl-3d/assets/shaders/: camera.vert  camera_with_normal.vert  lamp.frag  light.frag  light_map.frag  light_map.vert  texture.frag  triangle.frag  triangle.vert
topics/rust/rust-opengl-3d/src/: camera.rs  images.rs  main.rs  shader.rs  vertex_constants.rs
topics/rust/rust-opengl/assets/shaders/: triangle.frag  triangle.vert
topics/rust/rust-opengl/render_gl_derive/: Cargo.toml
topics/rust/rust-opengl/render_gl_derive/src/: lib.rs
topics/rust/rust-opengl/src/: main.rs  resources.rs
topics/rust/rust-opengl/src/render_gl/: data.rs  mod.rs  shader.rs
(+283 files in other folders)
