[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Ben Clare <ben.clare2@gmail.com>"]
edition = "2018"

[[bin]]
name = "d1p1"
path = "src/d1p1.rs"

[[bin]]
name = "d1p2"
path = "src/d1p2.rs"

[[bin]]
name = "d2p1"
path = "src/d2p1.rs"

[[bin]]
name = "d2p2"
path = "src/d2p2.rs"

[[bin]]
name = "d3p1"
path = "src/d3p1.rs"

[[bin]]
name = "d3p2"
path = "src/d3p2.rs"

[dependencies]
