[package]
name = "amethyst-pong"
version = "0.1.0"
authors = ["Ben Clare <ben.clare2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.amethyst]
version = "0.15"
features = ["vulkan"]

[dependencies]
log = "0.4"
