[package]
name = "hexes"
version = "0.1.0"
authors = ["Ben Clare <ben.clare2@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.23.0"
wgpu = "0.6.0"
wgpu-subscriber = "0.1.0"
futures = "0.3.6"
cgmath = "0.17.0"

[build-dependencies]
shaderc = "0.6.2"
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
