[package]
name = "interpolation"
version = "0.1.0"
authors = ["benc <ben.clare2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[lib]
path = "src/lib/mod.rs"
crate-type = ["lib"]
bench = false

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde-value = "0.7"
simple_opengl_renderer = { git = "https://github.com/Ben435/simple-opengl-renderer" }
env_logger = "0.7"
log = "0.4"
gl = "0.14"
cgmath = { version = "0.17", features = ["serde"] }
glfw = "0.40"
