[package]
name = "learn_webserver"
version = "0.1.0"
authors = ["benc <ben.clare2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = { version = "0.4.20", features = [ "std" ] }
num_cpus = "1.16.0"
