[package]
name = "learning_actix_web"
version = "0.1.0"
authors = ["benc <ben.clare2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "^0.9.0"
actix-web = "^2.0"
actix-rt = "^1.1.1"
diesel = { version = "^1.4.4", features=["sqlite"] }
dotenv = "^0.15.0"
uuid = { version = "^0.8.1", features=["v4"] }
