[package]
name = "rts_3d"
version = "0.1.0"
authors = ["Ben Clare <ben.clare2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
walkdir = "2.3"

[dependencies]
gl = "0.14"
glfw = "0.39"
cgmath = "0.17"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_trace"] }
env_logger = "0.7"
wavefront_obj = "8.0"
specs = { version = "0.16", features = ["specs-derive"] }
