[package]
name = "rust-opengl-3d"
version = "0.1.0"
authors = ["benc <ben.clare2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
walkdir = "2.3"

[dependencies]
gl = "0.14.0"
glfw = "0.39.0"
image = "0.23.6"
cgmath = "0.17.0"
